--- a/estilos.css
+++ b/estilos.css
@@ -19,7 +19,7 @@ body {
   font-style: italic;
 }
 
-.contenedorBotones {
+.contenedor__botones {
   display: flex;
   width: 100%;
   margin-bottom: 10px;
@@ -28,7 +28,7 @@ body {
 }
 
 
-.contenedorVirtual {
+.contenedor__virtual {
   padding: 15px;
   margin-bottom: 20px;
   border-radius: 1em;
@@ -37,7 +37,7 @@ body {
   cursor: pointer;
 }
 
-.contenedorVirtual:hover {
+.contenedor__virtual:hover {
     box-shadow: 0 0 15px rgb(63, 59, 59);
 
 }
@@ -75,22 +75,8 @@ body {
   border-radius: 4px;
 }
 
-.botonImprimir {
-  padding: 4px 12px;
-  margin-bottom: 2em;
-  margin-left: 80px;
-  font-size: 1em;
-  line-height: 20px;
-  color: #333333;
-  text-align: center;
-  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-  vertical-align: middle;
-  cursor: pointer;
-  background-color: #f5f5f5;
-  border: 1px solid #cccccc;
-  *border: 0;
-  border-color: #e6e6e6 #e6e6e6 #bfbfbf;
-  border-radius: 4px;
+.imprimir {
+ margin-left: 80px;
 }
 
 
@@ -99,11 +85,6 @@ body {
 }
 
 .boton:hover {
-  background-color: rgb(82, 101, 102);
-  color: white;
-}
-
-.botonImprimir:hover {
   background-color: rgb(82, 101, 102);
   color: white;
 }
